<resources>
    <string name="app_name">SmoothRefreshLayout</string>
    <string name="with_frameLayout">With FrameLayout</string>
    <string name="test_recyclerView_in_nestedScrollView">Test RecyclerView inside
        NestedScrollView</string>
    <string name="test_recyclerView_in_nestedScrollView_in_srl">Test RecyclerView insideNestedScrollView inside Srl</string>
    <string name="with_listView">With ListView</string>
    <string name="with_recyclerView">With RecyclerView</string>
    <string name="with_gridView">With GridView</string>
    <string name="with_webView">With WebView</string>
    <string name="with_viewPager">With ViewPager</string>
    <string name="refreshing_keep_refresh_view">When refreshing triggered keep refresh view</string>
    <string name="in_coordinatorLayout_with_recyclerView">In CoordinatorLayout With
        RecyclerView</string>
    <string name="test_nested">Test Nested</string>
    <string name="test_material_style">Material Style</string>
    <string name="pull_to_refresh">Pull to refresh</string>
    <string name="release_to_refresh">Release to refresh</string>
    <string name="enable_next_pull_to_refresh_at_once">Refresh at once after completion of
        refresh</string>
    <string name="over_scroll">Test OverScroll</string>
    <string name="continue_pull_down_to_have_a_surprise">Continue pull down to have a
        surprise</string>
    <string name="release_your_finger_to_get_surprise">Release your finger to get surprise</string>
    <string name="test_two_level_refresh">Test Two Level Refresh</string>
    <string name="number_of_two_level_refresh">Number of Two-Level refresh:</string>
    <string name="number_of_one_level_refresh">Number of refresh:</string>
    <string name="number_of_refresh">Number of refresh:</string>
    <string name="test_qq_activity_style">Test QQ activity style</string>
    <string name="normal_style">Normal style</string>
    <string name="activity_style">Activity style</string>
    <string name="current_version">Current version:</string>
    <string name="test_qq_web_style">Test QQ web style</string>
    <string name="debug_on">Debug: on</string>
    <string name="debug_off">Debug: off</string>
    <string name="has_been_triggered_to_load_more">Has been triggered to load more</string>
    <string name="test_refresh_layout_in_viewPager_under_nested_layout">Test refresh layout
    in ViewPager under nested layout</string>
    <string name="change_style">Change refresh view style</string>
    <string name="no_data">No data</string>
    <string name="get_data_fail">Get data fail</string>
    <string name="change_state_to_empty">Empty state</string>
    <string name="change_state_to_content">Content state</string>
    <string name="change_state_to_error">Error state</string>
    <string name="custom">Custom</string>
    <string name="change_state_to_custom">Custom state</string>
    <string name="disable_refresh">Disable refresh</string>
    <string name="disable_loadMore">Disable loadMore</string>
    <string name="enable_refresh">Enable refresh</string>
    <string name="enable_loadMore">Enable loadMore</string>
    <string name="test_base_recyclerView_adapter">Test BaseRecyclerViewAdapter</string>
    <string name="enabled_intercept_touch_while_loading">Enabled intercept touch event
        while loading</string>
    <string name="welcome_to_secondary_menu">Welcome to secondary menu</string>
    <string name="disable_two_level_refresh">Disable Two-Level refresh</string>
    <string name="enable_two_level_refresh">Enable Two-Level refresh</string>
    <string name="brush">Brush</string>
    <string name="continuous_brush_is_easier_to_get_red_envelopes">Continuous brush is easier to get red envelopes</string>
    <string name="has_been_triggered_to_refresh">Has been triggered to refresh</string>
    <string name="test_nested_horizontal_views">Test nested horizontal views</string>
    <string name="enable_check_finger_inside_horizontal_view">Enable check finger inside
        horizontal view</string>
    <string name="disable_check_finger_inside_horizontal_view">Disable check finger inside
        horizontal view</string>
    <string name="change_style_to_style_default">Change style to STYLE_DEFAULT</string>
    <string name="change_style_to_style_scale">Change style to STYLE_SCALE</string>
    <string name="change_style_to_style_pin">Change style to STYLE_PIN</string>
    <string name="change_style_to_style_follow_scale">Change style to STYLE_FOLLOW_SCALE</string>
    <string name="change_style_to_style_follow_pin">Change style to STYLE_FOLLOW_PIN</string>
    <string name="change_style_to_style_follow_center">Change style to STYLE_FOLLOW_CENTER</string>
    <string name="test_horizontal_refresh">Test Horizontal Refresh</string>
    <string name="test_horizontal_recyclerView">Test With Horizontal RecyclerView</string>
    <string name="swipe_to_load_detail">Swipe\nTo\nLoad\nDetail</string>
    <string name="release_to_load_detail">Release\nTo\nLoad\nDetail</string>
    <string name="test_multi_direction_views">Test multi direction views</string>
    <string name="test_scroll_to_auto_refresh">Test scroll to auto refresh</string>
    <string name="back_to_top_to_refresh">Back to top to refresh</string>
    <string name="back_to_bottom_to_refresh">Back to bottom to refresh</string>
    <string name="auto_refresh_func_demo">Auto-Refresh demo</string>
    <string name="test_scale_effect">Test scale effect</string>
    <string name="test_horizontal_scale_effect">Test horizontal scale effect</string>
    <string name="sticky_header">Sticky header view</string>
    <string name="sticky_footer">Sticky footer view</string>
    <string name="test_nested_with_viewpager">Test nested with viewPager in one
        refreshLayout</string>
    <string name="second_floor">Second floor</string>
    <string name="open">Open</string>
    <string name="test_bottom_sheet_dialog">Test BottomSheetDialog</string>
    <string name="expand_or_collapse">expand/collapse</string>
    <string name="no_more_data_currently_click_to_reload">No more data currently, click to
        reload</string>
    <string name="test_motionlayout_scene">Test MotionLayout Scene</string>
    <string name="test_inner_motionlayout_scene">Test Srl in MotionLayout Scene</string>
</resources>
